Make bb tasks work unattended, for agents and humans alike
`bb dev` was broken out of the box and several warnings fired on every build.

JDK resolution is now automatic. The tasks locate a JDK 21+ themselves -
checking JAVA_HOME, /Library/Java/JavaVirtualMachines, Homebrew and SDKMAN -
so a machine whose default java is 17 no longer dies with
UnsupportedClassVersionError. Documenting "export JAVA_HOME" was not a working
procedure; it required remembering an env var on every shell. Of the qualifying
JDKs the lowest is chosen, which keeps local builds on the version CI pins.

Warnings fixed:
- Browserslist "caniuse-lite is outdated" - refreshed, and `bb deps` now
  updates it so it cannot drift again silently.
- Tailwind "No utility classes were detected in your source files" - the
  content glob scanned ./dist/**/*.js, the advanced-optimized bundle, so
  Tailwind depended on the CLJS build having already run. Under `bb dev` the
  two watchers start in parallel, so it always lost the race. Now scans
  ./src/**/*.cljs with an extractor that understands hiccup's
  :table.table.table-xs.w-full keyword form. Side effect: the stylesheet is
  22KB smaller, since it no longer matches spurious candidates in minified JS.
- sun.misc.Unsafe deprecation warnings from the Closure Compiler's bundled
  protobuf on JDK 24+ - suppressed via --sun-misc-unsafe-memory-access=allow,
  gated on the major version because the flag does not exist before 24 and
  aborts the JVM outright on 21 or 17.
- Test output carried ~25 lines of devlog trace, including deliberate fetch
  failures with stack traces, burying the results. goog.DEBUG is now false in
  the :test build.

Starting a second watch failed with a 45-line ExceptionInfo "already started"
from inside shadow-cljs. `bb dev` now checks first and prints what to do.

New tasks, written so a coding agent can drive them as well as a person:
non-interactive, safe to re-run, and reporting state through exit codes.

  bb doctor      toolchain c